Type-Checker/parser.output
Terminals unused in grammar

   T_EOF
   T_CLASS


Grammar

    0 $accept: START $end

    1 START: CLASSES

    2 CLASSES: CLASSES CLASS
    3        | CLASS

    4 CLASS: T_IDENTIFIER INHERITS T_OBRACET CLASS_BLOCK T_CBRACET

    5 INHERITS: T_EXTENDS T_IDENTIFIER
    6         | %empty

    7 CLASS_BLOCK: MEMBERS METHODS
    8            | MEMBERS
    9            | METHODS
   10            | %empty

   11 MEMBERS: MEMBERS MEMBER T_SEMICOLON
   12        | MEMBER T_SEMICOLON

   13 MEMBER: MEMBER_TYPES T_IDENTIFIER

   14 MEMBER_TYPES: T_BOOLEAN
   15             | T_INTEGER
   16             | T_IDENTIFIER

   17 METHODS: METHODS METHOD
   18        | METHOD

   19 RETURN_MEMBER_TYPES: T_BOOLEAN
   20                    | T_INTEGER
   21                    | T_IDENTIFIER
   22                    | T_NONE

   23 METHOD: T_IDENTIFIER T_OPAREN PARAMETERS T_CPAREN T_ARROW RETURN_MEMBER_TYPES T_OBRACET BODY T_CBRACET
   24       | T_IDENTIFIER T_OPAREN T_CPAREN T_ARROW RETURN_MEMBER_TYPES T_OBRACET BODY T_CBRACET

   25 PARAMETERS: PARAMETERS T_COMMA PARM
   26           | PARM

   27 PARM: T_IDENTIFIER T_COLON MEMBER_TYPES

   28 BODY: DECLRATION_STATEMENTS STATEMENTS RETURN_CONTROL
   29     | DECLRATION_STATEMENTS RETURN_CONTROL
   30     | STATEMENTS RETURN_CONTROL
   31     | RETURN_CONTROL

   32 DECLRATION_STATEMENTS: DECLRATION_STATEMENTS X T_SEMICOLON
   33                      | X T_SEMICOLON

   34 X: MEMBER_TYPES DECLARATION

   35 DECLARATION: DECLARATION T_COMMA T_IDENTIFIER
   36            | T_IDENTIFIER

   37 RETURN_CONTROL: T_RETURN EXPRESSION T_SEMICOLON
   38               | %empty

   39 STATEMENTS: STATEMENTS STATEMENT
   40           | STATEMENT

   41 STATEMENT: METHODCALL T_SEMICOLON
   42          | ASSIGNING T_SEMICOLON
   43          | WHILELOOP
   44          | REPEAT_UNTIL T_SEMICOLON
   45          | PRINT T_SEMICOLON
   46          | IF_ELSE

   47 ASSIGNING: T_IDENTIFIER T_DOT T_IDENTIFIER T_ASSIGNMENT EXPRESSION
   48          | T_IDENTIFIER T_ASSIGNMENT EXPRESSION

   49 WHILELOOP: T_WHILESTMNT EXPRESSION T_OBRACET STATEMENTS T_CBRACET

   50 MEMBER_ACCESS: T_IDENTIFIER T_DOT T_IDENTIFIER

   51 EXPRESSION: T_OPAREN EXPRESSION T_CPAREN
   52           | EXPRESSION T_AND EXPRESSION
   53           | EXPRESSION T_OR EXPRESSION
   54           | EXPRESSION T_LESSEQ EXPRESSION
   55           | EXPRESSION T_LESS EXPRESSION
   56           | EXPRESSION T_PLUS EXPRESSION
   57           | EXPRESSION T_EQUALS EXPRESSION
   58           | EXPRESSION T_MINUS EXPRESSION
   59           | EXPRESSION T_MULT EXPRESSION
   60           | EXPRESSION T_DIVIDE EXPRESSION
   61           | T_MINUS EXPRESSION
   62           | T_NOT EXPRESSION
   63           | T_LITERAL
   64           | MEMBER_ACCESS
   65           | T_IDENTIFIER
   66           | METHODCALL
   67           | T_TRUE
   68           | T_FALSE
   69           | T_NEW CLASS_NAME

   70 ARGUMENTS: ARGUMENTS T_COMMA EXPRESSION
   71          | EXPRESSION

   72 METHODCALL: T_IDENTIFIER T_OPAREN ARGUMENTS T_CPAREN
   73           | T_IDENTIFIER T_OPAREN T_CPAREN
   74           | T_IDENTIFIER T_DOT T_IDENTIFIER T_OPAREN ARGUMENTS T_CPAREN
   75           | T_IDENTIFIER T_DOT T_IDENTIFIER T_OPAREN T_CPAREN

   76 CLASS_NAME: T_IDENTIFIER
   77           | T_IDENTIFIER T_OPAREN ARGUMENTS T_CPAREN
   78           | T_IDENTIFIER T_OPAREN T_CPAREN

   79 WHILELOOP: T_WHILESTMNT EXPRESSION T_OBRACET STATEMENTS T_OBRACET

   80 REPEAT_UNTIL: T_REPEATSTMNT T_OBRACET STATEMENTS T_CBRACET T_UNTILSTMNT T_OPAREN EXPRESSION T_CPAREN

   81 IF_ELSE: T_IFSTMNT EXPRESSION T_OBRACET STATEMENTS T_CBRACET ELSE_BLOCK

   82 ELSE_BLOCK: T_ELSESTMNT T_OBRACET STATEMENTS T_CBRACET
   83           | %empty

   84 PRINT: T_PRINTSTMNT EXPRESSION


Terminals, with rules where they appear

$end (0) 0
error (256)
T_ARROW (258) 23 24
T_PLUS (259) 56
T_MINUS (260) 58 61
T_MULT (261) 59
T_DIVIDE (262) 60
T_AND (263) 52
T_OR (264) 53
T_NOT (265) 62
T_OPAREN (266) 23 24 51 72 73 74 75 77 78 80
T_CPAREN (267) 23 24 51 72 73 74 75 77 78 80
T_OBRACET (268) 4 23 24 49 79 80 81 82
T_CBRACET (269) 4 23 24 49 80 81 82
T_SEMICOLON (270) 11 12 32 33 37 41 42 44 45
T_COMMA (271) 25 35 70
T_DOT (272) 47 50 74 75
T_ASSIGNMENT (273) 47 48
T_LESSEQ (274) 54
T_LESS (275) 55
T_EQUALS (276) 57
T_IFSTMNT (277) 81
T_ELSESTMNT (278) 82
T_WHILESTMNT (279) 49 79
T_REPEATSTMNT (280) 80
T_UNTILSTMNT (281) 80
T_PRINTSTMNT (282) 84
T_LITERAL (283) 63
T_TRUE (284) 67
T_FALSE (285) 68
T_BOOLEAN (286) 14 19
T_INTEGER (287) 15 20
T_NONE (288) 22
T_NEW (289) 69
T_EXTENDS (290) 5
T_EOF (291)
T_COLON (292) 27
T_RETURN (293) 37
T_CLASS (294)
T_IDENTIFIER (295) 4 5 13 16 21 23 24 27 35 36 47 48 50 65 72 73 74
    75 76 77 78
NOT (296)
UNARYMINUS (297)


Nonterminals, with rules where they appear

$accept (43)
    on left: 0
START (44)
    on left: 1, on right: 0
CLASSES (45)
    on left: 2 3, on right: 1 2
CLASS (46)
    on left: 4, on right: 2 3
INHERITS (47)
    on left: 5 6, on right: 4
CLASS_BLOCK (48)
    on left: 7 8 9 10, on right: 4
MEMBERS (49)
    on left: 11 12, on right: 7 8 11
MEMBER (50)
    on left: 13, on right: 11 12
MEMBER_TYPES (51)
    on left: 14 15 16, on right: 13 27 34
METHODS (52)
    on left: 17 18, on right: 7 9 17
RETURN_MEMBER_TYPES (53)
    on left: 19 20 21 22, on right: 23 24
METHOD (54)
    on left: 23 24, on right: 17 18
PARAMETERS (55)
    on left: 25 26, on right: 23 25
PARM (56)
    on left: 27, on right: 25 26
BODY (57)
    on left: 28 29 30 31, on right: 23 24
DECLRATION_STATEMENTS (58)
    on left: 32 33, on right: 28 29 32
X (59)
    on left: 34, on right: 32 33
DECLARATION (60)
    on left: 35 36, on right: 34 35
RETURN_CONTROL (61)
    on left: 37 38, on right: 28 29 30 31
STATEMENTS (62)
    on left: 39 40, on right: 28 30 39 49 79 80 81 82
STATEMENT (63)
    on left: 41 42 43 44 45 46, on right: 39 40
ASSIGNING (64)
    on left: 47 48, on right: 42
WHILELOOP (65)
    on left: 49 79, on right: 43
MEMBER_ACCESS (66)
    on left: 50, on right: 64
EXPRESSION (67)
    on left: 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68
    69, on right: 37 47 48 49 51 52 53 54 55 56 57 58 59 60 61 62 70
    71 79 80 81 84
ARGUMENTS (68)
    on left: 70 71, on right: 70 72 74 77
METHODCALL (69)
    on left: 72 73 74 75, on right: 41 66
CLASS_NAME (70)
    on left: 76 77 78, on right: 69
REPEAT_UNTIL (71)
    on left: 80, on right: 44
IF_ELSE (72)
    on left: 81, on right: 46
ELSE_BLOCK (73)
    on left: 82 83, on right: 81
PRINT (74)
    on left: 84, on right: 45


State 0

    0 $accept: . START $end

    T_IDENTIFIER  shift, and go to state 1

    START    go to state 2
    CLASSES  go to state 3
    CLASS    go to state 4


State 1

    4 CLASS: T_IDENTIFIER . INHERITS T_OBRACET CLASS_BLOCK T_CBRACET

    T_EXTENDS  shift, and go to state 5

    $default  reduce using rule 6 (INHERITS)

    INHERITS  go to state 6


State 2

    0 $accept: START . $end

    $end  shift, and go to state 7


State 3

    1 START: CLASSES .
    2 CLASSES: CLASSES . CLASS

    T_IDENTIFIER  shift, and go to state 1

    $default  reduce using rule 1 (START)

    CLASS  go to state 8


State 4

    3 CLASSES: CLASS .

    $default  reduce using rule 3 (CLASSES)


State 5

    5 INHERITS: T_EXTENDS . T_IDENTIFIER

    T_IDENTIFIER  shift, and go to state 9


State 6

    4 CLASS: T_IDENTIFIER INHERITS . T_OBRACET CLASS_BLOCK T_CBRACET

    T_OBRACET  shift, and go to state 10


State 7

    0 $accept: START $end .

    $default  accept


State 8

    2 CLASSES: CLASSES CLASS .

    $default  reduce using rule 2 (CLASSES)


State 9

    5 INHERITS: T_EXTENDS T_IDENTIFIER .

    $default  reduce using rule 5 (INHERITS)


State 10

    4 CLASS: T_IDENTIFIER INHERITS T_OBRACET . CLASS_BLOCK T_CBRACET

    T_BOOLEAN     shift, and go to state 11
    T_INTEGER     shift, and go to state 12
    T_IDENTIFIER  shift, and go to state 13

    $default  reduce using rule 10 (CLASS_BLOCK)

    CLASS_BLOCK   go to state 14
    MEMBERS       go to state 15
    MEMBER        go to state 16
    MEMBER_TYPES  go to state 17
    METHODS       go to state 18
    METHOD        go to state 19


State 11

   14 MEMBER_TYPES: T_BOOLEAN .

    $default  reduce using rule 14 (MEMBER_TYPES)


State 12

   15 MEMBER_TYPES: T_INTEGER .

    $default  reduce using rule 15 (MEMBER_TYPES)


State 13

   16 MEMBER_TYPES: T_IDENTIFIER .
   23 METHOD: T_IDENTIFIER . T_OPAREN PARAMETERS T_CPAREN T_ARROW RETURN_MEMBER_TYPES T_OBRACET BODY T_CBRACET
   24       | T_IDENTIFIER . T_OPAREN T_CPAREN T_ARROW RETURN_MEMBER_TYPES T_OBRACET BODY T_CBRACET

    T_OPAREN  shift, and go to state 20

    $default  reduce using rule 16 (MEMBER_TYPES)


State 14

    4 CLASS: T_IDENTIFIER INHERITS T_OBRACET CLASS_BLOCK . T_CBRACET

    T_CBRACET  shift, and go to state 21


State 15

    7 CLASS_BLOCK: MEMBERS . METHODS
    8            | MEMBERS .
   11 MEMBERS: MEMBERS . MEMBER T_SEMICOLON

    T_BOOLEAN     shift, and go to state 11
    T_INTEGER     shift, and go to state 12
    T_IDENTIFIER  shift, and go to state 13

    $default  reduce using rule 8 (CLASS_BLOCK)

    MEMBER        go to state 22
    MEMBER_TYPES  go to state 17
    METHODS       go to state 23
    METHOD        go to state 19


State 16

   12 MEMBERS: MEMBER . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 24


State 17

   13 MEMBER: MEMBER_TYPES . T_IDENTIFIER

    T_IDENTIFIER  shift, and go to state 25


State 18

    9 CLASS_BLOCK: METHODS .
   17 METHODS: METHODS . METHOD

    T_IDENTIFIER  shift, and go to state 26

    $default  reduce using rule 9 (CLASS_BLOCK)

    METHOD  go to state 27


State 19

   18 METHODS: METHOD .

    $default  reduce using rule 18 (METHODS)


State 20

   23 METHOD: T_IDENTIFIER T_OPAREN . PARAMETERS T_CPAREN T_ARROW RETURN_MEMBER_TYPES T_OBRACET BODY T_CBRACET
   24       | T_IDENTIFIER T_OPAREN . T_CPAREN T_ARROW RETURN_MEMBER_TYPES T_OBRACET BODY T_CBRACET

    T_CPAREN      shift, and go to state 28
    T_IDENTIFIER  shift, and go to state 29

    PARAMETERS  go to state 30
    PARM        go to state 31


State 21

    4 CLASS: T_IDENTIFIER INHERITS T_OBRACET CLASS_BLOCK T_CBRACET .

    $default  reduce using rule 4 (CLASS)


State 22

   11 MEMBERS: MEMBERS MEMBER . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 32


State 23

    7 CLASS_BLOCK: MEMBERS METHODS .
   17 METHODS: METHODS . METHOD

    T_IDENTIFIER  shift, and go to state 26

    $default  reduce using rule 7 (CLASS_BLOCK)

    METHOD  go to state 27


State 24

   12 MEMBERS: MEMBER T_SEMICOLON .

    $default  reduce using rule 12 (MEMBERS)


State 25

   13 MEMBER: MEMBER_TYPES T_IDENTIFIER .

    $default  reduce using rule 13 (MEMBER)


State 26

   23 METHOD: T_IDENTIFIER . T_OPAREN PARAMETERS T_CPAREN T_ARROW RETURN_MEMBER_TYPES T_OBRACET BODY T_CBRACET
   24       | T_IDENTIFIER . T_OPAREN T_CPAREN T_ARROW RETURN_MEMBER_TYPES T_OBRACET BODY T_CBRACET

    T_OPAREN  shift, and go to state 20


State 27

   17 METHODS: METHODS METHOD .

    $default  reduce using rule 17 (METHODS)


State 28

   24 METHOD: T_IDENTIFIER T_OPAREN T_CPAREN . T_ARROW RETURN_MEMBER_TYPES T_OBRACET BODY T_CBRACET

    T_ARROW  shift, and go to state 33


State 29

   27 PARM: T_IDENTIFIER . T_COLON MEMBER_TYPES

    T_COLON  shift, and go to state 34


State 30

   23 METHOD: T_IDENTIFIER T_OPAREN PARAMETERS . T_CPAREN T_ARROW RETURN_MEMBER_TYPES T_OBRACET BODY T_CBRACET
   25 PARAMETERS: PARAMETERS . T_COMMA PARM

    T_CPAREN  shift, and go to state 35
    T_COMMA   shift, and go to state 36


State 31

   26 PARAMETERS: PARM .

    $default  reduce using rule 26 (PARAMETERS)


State 32

   11 MEMBERS: MEMBERS MEMBER T_SEMICOLON .

    $default  reduce using rule 11 (MEMBERS)


State 33

   24 METHOD: T_IDENTIFIER T_OPAREN T_CPAREN T_ARROW . RETURN_MEMBER_TYPES T_OBRACET BODY T_CBRACET

    T_BOOLEAN     shift, and go to state 37
    T_INTEGER     shift, and go to state 38
    T_NONE        shift, and go to state 39
    T_IDENTIFIER  shift, and go to state 40

    RETURN_MEMBER_TYPES  go to state 41


State 34

   27 PARM: T_IDENTIFIER T_COLON . MEMBER_TYPES

    T_BOOLEAN     shift, and go to state 11
    T_INTEGER     shift, and go to state 12
    T_IDENTIFIER  shift, and go to state 42

    MEMBER_TYPES  go to state 43


State 35

   23 METHOD: T_IDENTIFIER T_OPAREN PARAMETERS T_CPAREN . T_ARROW RETURN_MEMBER_TYPES T_OBRACET BODY T_CBRACET

    T_ARROW  shift, and go to state 44


State 36

   25 PARAMETERS: PARAMETERS T_COMMA . PARM

    T_IDENTIFIER  shift, and go to state 29

    PARM  go to state 45


State 37

   19 RETURN_MEMBER_TYPES: T_BOOLEAN .

    $default  reduce using rule 19 (RETURN_MEMBER_TYPES)


State 38

   20 RETURN_MEMBER_TYPES: T_INTEGER .

    $default  reduce using rule 20 (RETURN_MEMBER_TYPES)


State 39

   22 RETURN_MEMBER_TYPES: T_NONE .

    $default  reduce using rule 22 (RETURN_MEMBER_TYPES)


State 40

   21 RETURN_MEMBER_TYPES: T_IDENTIFIER .

    $default  reduce using rule 21 (RETURN_MEMBER_TYPES)


State 41

   24 METHOD: T_IDENTIFIER T_OPAREN T_CPAREN T_ARROW RETURN_MEMBER_TYPES . T_OBRACET BODY T_CBRACET

    T_OBRACET  shift, and go to state 46


State 42

   16 MEMBER_TYPES: T_IDENTIFIER .

    $default  reduce using rule 16 (MEMBER_TYPES)


State 43

   27 PARM: T_IDENTIFIER T_COLON MEMBER_TYPES .

    $default  reduce using rule 27 (PARM)


State 44

   23 METHOD: T_IDENTIFIER T_OPAREN PARAMETERS T_CPAREN T_ARROW . RETURN_MEMBER_TYPES T_OBRACET BODY T_CBRACET

    T_BOOLEAN     shift, and go to state 37
    T_INTEGER     shift, and go to state 38
    T_NONE        shift, and go to state 39
    T_IDENTIFIER  shift, and go to state 40

    RETURN_MEMBER_TYPES  go to state 47


State 45

   25 PARAMETERS: PARAMETERS T_COMMA PARM .

    $default  reduce using rule 25 (PARAMETERS)


State 46

   24 METHOD: T_IDENTIFIER T_OPAREN T_CPAREN T_ARROW RETURN_MEMBER_TYPES T_OBRACET . BODY T_CBRACET

    T_IFSTMNT      shift, and go to state 48
    T_WHILESTMNT   shift, and go to state 49
    T_REPEATSTMNT  shift, and go to state 50
    T_PRINTSTMNT   shift, and go to state 51
    T_BOOLEAN      shift, and go to state 11
    T_INTEGER      shift, and go to state 12
    T_RETURN       shift, and go to state 52
    T_IDENTIFIER   shift, and go to state 53

    $default  reduce using rule 38 (RETURN_CONTROL)

    MEMBER_TYPES           go to state 54
    BODY                   go to state 55
    DECLRATION_STATEMENTS  go to state 56
    X                      go to state 57
    RETURN_CONTROL         go to state 58
    STATEMENTS             go to state 59
    STATEMENT              go to state 60
    ASSIGNING              go to state 61
    WHILELOOP              go to state 62
    METHODCALL             go to state 63
    REPEAT_UNTIL           go to state 64
    IF_ELSE                go to state 65
    PRINT                  go to state 66


State 47

   23 METHOD: T_IDENTIFIER T_OPAREN PARAMETERS T_CPAREN T_ARROW RETURN_MEMBER_TYPES . T_OBRACET BODY T_CBRACET

    T_OBRACET  shift, and go to state 67


State 48

   81 IF_ELSE: T_IFSTMNT . EXPRESSION T_OBRACET STATEMENTS T_CBRACET ELSE_BLOCK

    T_MINUS       shift, and go to state 68
    T_NOT         shift, and go to state 69
    T_OPAREN      shift, and go to state 70
    T_LITERAL     shift, and go to state 71
    T_TRUE        shift, and go to state 72
    T_FALSE       shift, and go to state 73
    T_NEW         shift, and go to state 74
    T_IDENTIFIER  shift, and go to state 75

    MEMBER_ACCESS  go to state 76
    EXPRESSION     go to state 77
    METHODCALL     go to state 78


State 49

   49 WHILELOOP: T_WHILESTMNT . EXPRESSION T_OBRACET STATEMENTS T_CBRACET
   79          | T_WHILESTMNT . EXPRESSION T_OBRACET STATEMENTS T_OBRACET

    T_MINUS       shift, and go to state 68
    T_NOT         shift, and go to state 69
    T_OPAREN      shift, and go to state 70
    T_LITERAL     shift, and go to state 71
    T_TRUE        shift, and go to state 72
    T_FALSE       shift, and go to state 73
    T_NEW         shift, and go to state 74
    T_IDENTIFIER  shift, and go to state 75

    MEMBER_ACCESS  go to state 76
    EXPRESSION     go to state 79
    METHODCALL     go to state 78


State 50

   80 REPEAT_UNTIL: T_REPEATSTMNT . T_OBRACET STATEMENTS T_CBRACET T_UNTILSTMNT T_OPAREN EXPRESSION T_CPAREN

    T_OBRACET  shift, and go to state 80


State 51

   84 PRINT: T_PRINTSTMNT . EXPRESSION

    T_MINUS       shift, and go to state 68
    T_NOT         shift, and go to state 69
    T_OPAREN      shift, and go to state 70
    T_LITERAL     shift, and go to state 71
    T_TRUE        shift, and go to state 72
    T_FALSE       shift, and go to state 73
    T_NEW         shift, and go to state 74
    T_IDENTIFIER  shift, and go to state 75

    MEMBER_ACCESS  go to state 76
    EXPRESSION     go to state 81
    METHODCALL     go to state 78


State 52

   37 RETURN_CONTROL: T_RETURN . EXPRESSION T_SEMICOLON

    T_MINUS       shift, and go to state 68
    T_NOT         shift, and go to state 69
    T_OPAREN      shift, and go to state 70
    T_LITERAL     shift, and go to state 71
    T_TRUE        shift, and go to state 72
    T_FALSE       shift, and go to state 73
    T_NEW         shift, and go to state 74
    T_IDENTIFIER  shift, and go to state 75

    MEMBER_ACCESS  go to state 76
    EXPRESSION     go to state 82
    METHODCALL     go to state 78


State 53
